<REFACTOR> Sort 관련 역할 Lotto로 변경